--- a/.github/workflows/sync-centralized-repo.yml
+++ b/.github/workflows/sync-centralized-repo.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           repository: sabbannagari/api-automation-with-agentic
           token: ${{ secrets.CENTRALIZED_REPO_TOKEN }}  
-          path: centralized-repo
+          path: test_case_generation
           fetch-depth: 0
 
       - name: Get changes from centralized repository
@@ -63,4 +63,5 @@ jobs:
       - name: Create the TestCases
         run: |
           echo "### create The test cases"
+          cd test_case_generation
           ls
