Print ANTHROPIC_API_KEY in sync workflow
Add echo command to print ANTHROPIC_API_KEY in workflow

--- a/.github/workflows/sync-centralized-repo.yml
+++ b/.github/workflows/sync-centralized-repo.yml
@@ -66,4 +66,5 @@ jobs:
           ls
           pwd 
           cd automation/automation
+          echo $ANTHROPIC_API_KEY
           python master.py --task "detect changes"
