--- a/.github/workflows/sync-centralized-repo.yml
+++ b/.github/workflows/sync-centralized-repo.yml
@@ -14,13 +14,6 @@ on:
 jobs:
   sync-centralized-repo:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/${{ github.actor }}/agentic-automation:build5-efe72f9
-      env:
-        ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-      options: >-
-        -v ${{ github.workspace }}/automation:/app/automation:rw
-
     steps:
       - name: Checkout current repository
         uses: actions/checkout@v4
@@ -65,6 +58,14 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "✅ Successfully checked out centralized repository" >> $GITHUB_STEP_SUMMARY
 
-      - name: Create the TestCases
+  create-testcases:
+    needs: checkout-repo
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/${{ github.actor }}/agentic-automation:build5-efe72f9
+      options: -v ${{ github.workspace }}/automation:/app/automation:rw
+      env:
+        ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+    steps:
+      - name: Run TestCases
         run: python /app/automation/automation/master.py --task "detect changes"
-
