Agentic api automation

--- a/.github/workflows/sync-centralized-repo.yml
+++ b/.github/workflows/sync-centralized-repo.yml
@@ -68,4 +68,5 @@ jobs:
         ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
     steps:
       - name: Run TestCases
-        run: python /app/automation/automation/master.py --task "detect changes"
+        run: |
+          ls -larth   
