Agentic api automation

--- a/.github/workflows/sync-centralized-repo.yml
+++ b/.github/workflows/sync-centralized-repo.yml
@@ -63,7 +63,10 @@ jobs:
     needs: sync-centralized-repo
     container:
       image: ghcr.io/${{ github.actor }}/agentic-automation:build5-efe72f9
-      options: -v ${{ github.workspace }}/automation:/app/automation:rw
+      options: >- 
+        -v ${{ github.workspace }}/automation:/app/automation:rw
+        --user $(id -u):$(id -g) 
+     
       env:
         ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
     steps:
