Agentic api automation

--- a/.github/workflows/sync-centralized-repo.yml
+++ b/.github/workflows/sync-centralized-repo.yml
@@ -81,5 +81,7 @@ jobs:
            ls -alrth
            cd automation
            ls -larth 
+           cd automation
+           ls -alrth
           
 
